# toujours_skateboarding_axum_back_api_rest

./: Cargo.toml  docker-compose.yaml  init-database.sh
entity/: Cargo.toml
entity/src/: user.rs
from_body/: Cargo.toml
from_body/src/: lib.rs  user_serialized.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
querry/: Cargo.toml
querry/src/: user.rs
src/: lib.rs  main.rs
src/database/: databaseconnection.rs  lib.rs  mod.rs
