[package]
name = "toujours_skateboarding_axum_back_api_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "entity"]

[dependencies]
# entity = { path = "entity" }
axum = "^0.6"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
migration = { path = "migration" } 
entity = { path = "entity" } 


[workspace.dependencies]
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-uuid"] }

