[package]
name = "toujours_skateboarding_axum_back_api_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "entity", "querry", "from_body"]

[dependencies]
axum = "^0.6"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tracing = "^0"
tracing-subscriber = "^0"
migration = { path = "migration" } 
entity = { path = "entity" } 
querry = { path = "querry" } 
from_body = { path = "from_body" } 
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
uuid = {version = "^1", features = ["v4","fast-rng","macro-diagnostics"]}


[workspace.dependencies]
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-uuid"] }


